[tool.poetry]
name = "pydiskdisp"
version = "0.1.0"
description = "Display disk partitons in cli with visual block diagrams"
authors = ["hoefkensj <hoefkens.j@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
